<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentLight"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="false">

            <LinearLayout
                android:id="@+id/lay_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="36dp"
                    android:layout_marginTop="36dp"
                    android:fontFamily="@font/product_sans"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="@string/txt_enter_details"
                    android:textColor="@color/colorPrimary"
                    android:textSize="36sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/view_name"
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:visibility="invisible"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/txt_input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextInputStyle">

                        <EditText
                            android:id="@+id/edt_user_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/txt_user_name"
                            android:inputType="text"
                            android:textColor="@color/md_grey_600"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/view_email"
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:visibility="invisible"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/txt_input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextInputStyle">

                        <EditText
                            android:id="@+id/edt_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/txt_email"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/md_grey_600"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="36dp"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/view_about"
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:visibility="invisible"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/txt_input_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextInputStyle">

                        <EditText
                            android:id="@+id/edt_about"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top|start"
                            android:hint="@string/txt_write_about_yourself"
                            android:inputType="textMultiLine"
                            android:minLines="4"
                            android:textColor="@color/md_grey_600" />
                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="36dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_keyboard_arrow_right_white"
                    app:backgroundTint="@color/colorPrimary"
                    app:borderWidth="0dp"
                    app:elevation="4dp"
                    app:fabSize="normal"
                    app:rippleColor="@color/colorPrimaryDark" />

            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

</LinearLayout>