<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentLight"
    android:windowSoftInputMode="adjustNothing"
    tools:context=".DetailsActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/git_image"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="48dp"
                    android:layout_marginBottom="24dp"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@android:color/white"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/txv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:textSize="24sp"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        tools:text="@string/txt_placeholder_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/txv_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        tools:text="@string/txt_placeholder_email" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="36dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/txv_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:textColor="@android:color/white"
                        tools:text="@string/txt_lorem_ipsum" />

                </LinearLayout>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="36dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_check_black_48dp"
                    app:backgroundTint="@color/colorAccent"
                    app:borderWidth="0dp"
                    app:elevation="4dp"
                    app:fabSize="normal"
                    app:rippleColor="@color/colorPrimaryDark" />

            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

</LinearLayout>